--- a/src/styles/mainStyle.css
+++ b/src/styles/mainStyle.css
@@ -80,6 +80,7 @@ a {
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   transition: right 0.7s ease-in-out;
+  z-index: 20;
 }
 
 .HamOuter-div.open {
@@ -187,7 +188,7 @@ li {
   /* background-color: #00d4ff; */
   /* visibility: hidden; */
   /* border: 1px red solid; */
-  z-index: 10;
+  z-index: 10; 
   /* background-color: #00d4ff; */
 }
 
@@ -502,7 +503,7 @@ li {
 /* -----------------------------------------About Section---------*/
 
 .AboutSection {
-  margin-top: 30rem;
+  margin-top: 20rem;
   position: relative;
   height: fit-content; /*use this approach to find out scroll div in outer site */
   width: fit-content;
@@ -1467,4 +1468,111 @@ ul.worklist h3::before {
   flex-direction: column;
   align-items: center;
 }
+
+.contactSocialMedia
+{
+  width: 50rem;
+}
+
+.copyright{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+
+.copyright h4 {
+  font-weight: 500;
+
+}
 /* -------------------------------------------- */
+
+/* -------------------------------AI Chat Bot----------------------- */
+
+.chatMainDiv{
+  margin-top: -40.5rem;
+  position: absolute;
+  width: 100%;
+  height: 40rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  /* z-index: 30; */
+  border: 1px red solid;
+  /* margin-left: 50rem; */
+  z-index: 10; /*  -1 & 10 */
+  transition: 1s ease-in-out;
+}
+
+
+.chattoggleTOp
+{
+  margin-top: -4rem;
+  transition: 1s ease-in-out;
+
+}
+
+
+
+.chat-container {
+  visibility:visible;
+  width: 30rem;
+  height: 35rem;
+  position: fixed;
+  background: #efcc04;
+  padding: 1rem;
+  border-radius: 8px;
+  box-shadow: 0 0 5px rgba(0,0,0,0.1);
+  margin-right: 1rem;
+  display:flex;
+  align-items: initial;
+  justify-content: flex-end;
+  flex-direction: column;
+  transition: .5s ease-in-out;
+}
+
+.chattogglemenu{
+  z-index:-1;
+  transition: .5s ease-in-out;
+  width: 0rem;
+  visibility: hidden;
+  
+}
+
+.chat-window {
+  max-height: 400px;
+  overflow-y: auto;
+  margin-bottom: 1rem;
+}
+
+.msg {
+  margin-bottom: 0.5rem;
+}
+
+.msg.user {
+  text-align: right;
+  color: blue;
+}
+
+.msg.bot {
+  text-align: left;
+  color: green;
+}
+
+.chat-form {
+  display: flex;
+  gap: 0.5rem;
+  width: 100%;
+  padding: .5rem;
+}
+
+.chat-form input {
+  flex: 1;
+  padding: 0.7rem;
+  font-size: 1rem;
+}
+
+.chat-form button {
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+}
+
