--- a/src/styles/mainStyle.css
+++ b/src/styles/mainStyle.css
@@ -16,8 +16,7 @@
   color: #efcc04;
 }
 
-.appClass
-{
+.appClass {
   width: 100%;
   height: 100%;
 }
@@ -69,14 +68,16 @@ a {
   max-width: 100px;
   max-height: 100px;
   pointer-events: none;
-  background: radial-gradient(circle, rgba(255, 255, 255, 0.25) 10%, transparent 60%);
+  background: radial-gradient(
+    circle,
+    rgba(255, 255, 255, 0.25) 10%,
+    transparent 60%
+  );
   border-radius: 50%;
   transition: left 50ms ease-out, top 50ms ease-out;
   z-index: 100;
-  border: .01rem solid #efcc04;
+  border: 0.01rem solid #efcc04;
 }
-
-
 
 /* -------------------------Hamburger Menu Styles------ */
 .HamOuter-div {
@@ -108,7 +109,7 @@ li {
 .haminner-div {
   position: relative;
   margin-top: 40px;
-  margin-right: 2%;
+  margin-right: 3%;
   width: fit-content;
   align-self: flex-end;
   box-shadow: 2px;
@@ -463,8 +464,7 @@ li {
   animation: glow 1.5s infinite alternate, shake 2s infinite alternate;
 }
 
-.AIanimation
-{
+.AIanimation {
   font-size: 60px;
   transition: 0.5s ease-in-out;
   /* animation: shake 2s infinite alternate; */
@@ -544,7 +544,7 @@ li {
 .AboutSection {
   margin-top: 10rem;
   position: relative;
-  height: fit-content; 
+  height: fit-content;
   width: fit-content;
   flex-direction: column;
   background-color: black;
@@ -561,7 +561,7 @@ li {
   font-family: "Proxima Nova", sans-serif;
 }
 
-.AboutSection h2{
+.AboutSection h2 {
   text-align: center;
 }
 /* .AboutSection::-webkit-scrollbar 
@@ -634,7 +634,6 @@ li {
   justify-content: center;
   margin-top: -3rem;
   background-color: black;
- 
 }
 
 /* follow this standard layout for all the other pages */
@@ -657,7 +656,6 @@ li {
   border-top-left-radius: 2.5rem;
   border-top-right-radius: 2.5rem;
   /* border: 1px solid red; */
-
 }
 
 .navHList {
@@ -665,7 +663,7 @@ li {
 
   /* flex: 0 0 0 0 0 0 0 auto;  */
   text-align: center;
-  padding: .5rem;
+  padding: 0.5rem;
   color: white !important;
 }
 
@@ -674,7 +672,7 @@ li {
   font-size: 18px;
 }
 
-.navListHorizontal li{
+.navListHorizontal li {
   height: 5rem;
 }
 
@@ -693,7 +691,7 @@ li {
 .presentVerMenu {
   color: black;
   font-size: 1.2rem;
-  padding-bottom: .3rem;
+  padding-bottom: 0.3rem;
   border-bottom: 3px solid rgb(51, 50, 48);
   transition: 0.5s ease-in-out;
 }
@@ -714,7 +712,6 @@ li {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
 }
 
 .MinimizeArrow {
@@ -775,7 +772,6 @@ li {
   padding-top: 50px;
 }
 
-
 .sdetDiv {
   padding: 30px;
   width: 40%;
@@ -833,11 +829,9 @@ body{
   color: black;
 }
 
-.skill
-{
+.skill {
   font-size: 1rem;
 }
-
 
 .container .skill {
   margin-bottom: 40px;
@@ -1125,7 +1119,6 @@ ul.worklist h3::before {
   display: inline-block;
   width: 1em;
   margin-left: -1em;
-  
 }
 
 .worklist li h3 {
@@ -1148,16 +1141,16 @@ ul.worklist h3::before {
   border: 4px solid rgb(92, 91, 88);
 }
 
-.companylabeldiv .Company2 a{
+.companylabeldiv .Company2 a {
   font-size: 1.2rem;
   padding-left: 1rem;
 }
 
-.Company2 h2{
-font-size: 1rem;
+.Company2 h2 {
+  font-size: 1rem;
 }
 
-.Company2-role{
+.Company2-role {
   font-size: 1.2rem !important;
 }
 /* ---------------------------- */
@@ -1284,19 +1277,19 @@ font-size: 1rem;
   box-shadow: 0px 0px 10px rgb(14, 14, 1);
   color: black;
   text-align: start;
-  font-size: .8rem;
+  font-size: 0.8rem;
   /* align-self: flex-start; */
 }
 
 .projectdetails h3 {
   display: inline;
-  font-size: .6rem;
+  font-size: 0.6rem;
   font-weight: 600;
 }
 
 .projectdetails h4 {
   display: inline;
-  font-size: .5rem;
+  font-size: 0.5rem;
   font-weight: 500;
   margin-top: -2rem;
 }
@@ -1310,7 +1303,6 @@ font-size: 1rem;
 /* ---------------------------------------------PlayStore----------------- */
 
 .PlaystoreSectionDiv {
- 
   color: white;
   padding: 5rem 10rem 5rem 10rem;
 }
@@ -1582,7 +1574,7 @@ font-size: 1rem;
 
 /* -------------------------------AI Chat Bot----------------------- */
 
-.AIStartDiv{
+.AIStartDiv {
   /* transition:1s ease-in-out; */
   width: 350px;
   height: 100px;
@@ -1599,14 +1591,11 @@ font-size: 1rem;
   padding: 1rem;
   border: 4px solid #ffd700;
   color: white;
-  transition:1s ease-in-out;
+  transition: 1s ease-in-out;
   opacity: 0;
-  animation: fadeIn 2s ease-in-out forwards; 
+  animation: fadeIn 2s ease-in-out forwards;
   /* margin-bottom: -5rem; */
-
 }
-
-
 
 @keyframes fadeIn {
   to {
@@ -1614,8 +1603,7 @@ font-size: 1rem;
   }
 }
 
-
-.AI-Icon{
+.AI-Icon {
   width: fit-content;
   height: fit-content;
   /* border: 1px solid red; */
@@ -1623,21 +1611,20 @@ font-size: 1rem;
   /* align-items: center; */
   /* background-color: #0f0f0f; */
 }
-.AI-usage-infodiv{
+.AI-usage-infodiv {
   align-self: center;
   /* border: 1px red solid; */
 }
 
-.AI-usage-infodiv h1{
+.AI-usage-infodiv h1 {
   font-size: 1rem;
 }
 
-.AI-usage-infodiv h3{
-font-size: .7rem;
+.AI-usage-infodiv h3 {
+  font-size: 0.7rem;
 }
 
-
-.AI-Face{
+.AI-Face {
   width: 150px;
   /* height: fit-content; */
   margin-bottom: 2rem;
@@ -1658,8 +1645,7 @@ font-size: .7rem;
   transition: 1s ease-in-out;
 }
 
-.AIMarginTop
-{
+.AIMarginTop {
   margin-top: -6rem;
 }
 
@@ -1692,12 +1678,12 @@ font-size: .7rem;
   transition: 0.5s ease-in-out;
   border: 0.3rem solid #ffd700;
   opacity: 0;
-  animation: fadeIn 1s ease-in-out forwards; 
+  animation: fadeIn 1s ease-in-out forwards;
 }
 
 .chattogglemenu {
   z-index: -1;
-  transition: .5s ease-in-out;
+  transition: 0.5s ease-in-out;
   margin-right: 12%;
 }
 
@@ -1719,7 +1705,7 @@ font-size: .7rem;
   min-height: 400px;
   /* border-top: 1px solid #ffd700; */
   display: flex;
-  
+
   flex-direction: column;
   justify-content: flex-end;
 }
@@ -1730,7 +1716,7 @@ font-size: .7rem;
 .msg {
   margin-bottom: 0.5rem;
   font-weight: 600;
-  width:fit-content;
+  width: fit-content;
 }
 
 .msg p {
@@ -1741,26 +1727,21 @@ font-size: .7rem;
   /* border: 1px solid red; */
   border-radius: 1rem;
   transition: 1s ease-in-out;
-  
-
 }
-
 
 .msg.user {
   align-self: flex-end;
   text-align: left;
   color: rgb(251, 251, 255);
   display: block;
-
 }
 
 .user p {
   background-color: #fff;
   color: black;
-  
 }
 
-.bot p{
+.bot p {
   background-color: #ffd700;
   color: black;
 }
@@ -1776,7 +1757,7 @@ font-size: .7rem;
   /* gap: 0.5rem; */
   width: 100%;
   padding: 0.5rem;
-/* border: 1px solid red; */
+  /* border: 1px solid red; */
 }
 
 .chat-form input {
@@ -1794,7 +1775,7 @@ font-size: .7rem;
 }
 
 .chat-form button {
-  padding: .5rem;
+  padding: 0.5rem;
   font-size: 1rem;
   background-color: #ffd700;
   border-radius: 0.5rem;
@@ -1808,17 +1789,17 @@ font-size: .7rem;
   padding: 0rem;
   display: flex;
   justify-content: space-between;
-  border-bottom: .1rem solid #ffd700;
- height: fit-content;
+  border-bottom: 0.1rem solid #ffd700;
+  height: fit-content;
   align-items: center;
   /* margin-bottom: 70%; */
 }
 
-.AI-V-Alingment{
+.AI-V-Alingment {
   margin-top: 24%;
 }
 
-.AI-V-Alingment-chatwindow{
+.AI-V-Alingment-chatwindow {
   margin-top: 46.5%;
 }
 
@@ -1845,9 +1826,7 @@ font-size: .7rem;
   border: 1px solid white;
 }
 
-
-.AIanimation
-{
+.AIanimation {
   font-size: 90px;
   transition: 0.5s ease-in-out;
   animation: shakeAI 1s infinite alternate;
@@ -1872,87 +1851,164 @@ font-size: .7rem;
   }
 }
 
-
 /* ------------------------------------------------------------------ */
 /* --------------------------------------------------------------------- */
 /* --------------------------------------------------------------------------- */
 /* --------------------------------- Mobile View ---------------------------------- */
 
-
-/*
-
-@media screen and (max-width: 768px) {
-  .Home{
-    width: 400px;
+@media screen and (max-height: 700px) {
+  /* Increased max-height */
+  .chatMainDiv {
+    margin-left: 6rem !important;
+    margin-top: -25rem !important; /* Adjust as needed, or consider removing/resetting */
   }
 
+  .chat-container {
+    width: 80% !important;
+    height: 96%;
+    margin-top: -105% !important;
+    margin-right: 6rem !important;
+    border-radius: 0.5rem;
+  }
+  .chat-window-outer {
+    min-height: 510px !important;
+  }
+
+  
+  .Playstore-Tile {
+    transform: scale(.4) !important;
+  }
+
+  .workMaindiv::after {
+    bottom: 27rem !important;
+    left: -1rem;
+    }
+
+    .LeftDiv
+    {
+      margin-left: -3.5rem !important;
+    }
+
+
+
+}
+
+@media screen and (max-width: 768px) {
+  .Home {
+    width: 100%;
+    height: 100%;
+  }
 
   .HomeOuterDiv {
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    flex-direction: row;
+    align-items: center;
     height: 20rem;
-    padding: 2rem;
-    width: 560px;
+    padding: 0rem;
+    width: 100%;
+    /* border: 1px red solid; */
   }
 
-  .hover-highlight{
+  .MinimizeArrowAfter {
+    font-size: 1.5rem;
+    margin-left: 2rem;
+    margin-top: 1rem;
+  }
+
+  .hover-highlight {
     width: 0rem;
     height: 0rem;
+    border: none;
   }
 
-  .reduceHight_{
-    height: 100px;
-    width: 200px;
-
+  .menuList {
+    text-align: left;
   }
-  .navListHorizontal{
+
+  .haminner-div {
+    margin-right: 1rem;
+  }
+
+  .navListHorizontal {
     visibility: hidden;
   }
 
+  .reduceTopDiv {
+    height: 12.5rem;
+    /* border: 1px solid red; */
+    width: 100%;
+    /* transform: scale(.8); */
+  }
+
+  .reduceTopDiv-mobile {
+    height: 5.5rem;
+    /* width: 100%; */
+  }
 
   .RightDiv {
-    width: fit-content;
-    height: fit-content;
+    width: 30%;
+    height: 100%;
     margin: 0;
     text-align: center;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: flex-end;
-    align-items: flex-end;
-    border: 2px solid red;
+    align-items: flex-start;
+    /* border: 2px solid red; */
+    /* overflow: scroll; */
+    /* margin-right: 10rem; */
   }
 
-  .LeftDiv{
-    transform: scale(.5);
-    justify-content: flex-end;
-    align-items:center;
-    border: 1red red solid;
-    z-index: -1;
-    
+  .LeftDiv {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    margin-top: 8rem;
+    transform: scale(0.5);
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-left: -2.5rem;
+    /* border: 2px red solid; */
   }
 
-  .RightDiv{
-   
+  .ImageDiv {
+    /* visibility: visible; */
+    width: 25rem;
+    height: 25rem;
+    overflow: visible;
+    margin-top: 5rem;
+    display: flex;
+    align-self: flex-start;
+    justify-content: center;
+    /* background-color: red; */
+    margin-left: 3.5rem;
+    /* border: 1px solid red; */
   }
 
-
-
-  .ImageDiv{
-visibility: visible;
-    width: 200px;
-    margin-left: 20rem;
-    height: 200px;
+  .mobile-Img-Div {
+    margin-left: 7.5rem;
   }
 
-  .reduceHight_normal{
-    height: 100px;
+  .mobile-left-div {
+    transform: scale(0.3);
+    margin-right: -3rem;
+    margin-top: 5rem;
   }
 
-  .RightDiv
-  {
-    width: 40%;
-    height: 40%;
-    transform: scale(.5);
-    margin-right: 10rem;
+  .imgclass {
+    /* margin-left: 10rem; */
+    width: 10rem;
+    height: 14rem;
+    align-self: center;
+    margin-top: 20rem;
+    /* background-color: rebeccapurple; */
+  }
+
+  .VerSocialList {
+    border: 1px solid orange;
+    transform: scale(0.5);
+    margin: 0rem;
+    visibility: hidden;
   }
 
   .headings,
@@ -1960,8 +2016,24 @@ visibility: visible;
   .myRole {
     font-size: 2rem;
     text-align: center;
+    margin-top: 2rem;
+    margin-left: 0rem;
   }
 
+  .HomeInfo {
+    margin-left: 1.5rem;
+  }
+
+  .myInfodiv {
+    width: fit-content;
+    /* border: 1px solid red; */
+    font-size: 1rem;
+  }
+
+  .myInfodiv h1 {
+    /* width: 20rem; */
+    font-size: 1.5rem;
+  }
   .ShortInfoDiv {
     width: 100%;
     flex-direction: column;
@@ -1969,6 +2041,38 @@ visibility: visible;
 
   .ImgSocialDiv {
     flex-direction: column;
+    width: 300px;
+    height: 300px;
+    /* margin-right: -20rem; */
+    border: 1px sold red;
+    /* background-color: #00d4ff; */
+  }
+
+  /* --------------------------AI Mobile------------------ */
+  .AIStartDiv {
+    padding: 1rem;
+    transform: scale(0.5);
+  }
+
+  .chatMainDiv {
+    margin-left: 6.5rem;
+    margin-top: 3rem;
+  }
+
+  .chattoggleTOp {
+    margin-top: 5rem;
+  }
+
+  .chat-container {
+    width: 80%;
+    height: 96%;
+    margin-top: -36.5rem;
+    margin-right: 6.6rem;
+    border-radius: 0.5rem;
+  }
+
+  .chat-window-outer {
+    min-height: 750px;
   }
 
   .skillmaindiv,
@@ -1981,8 +2085,7 @@ visibility: visible;
 
   .Project-Tile,
   .Certificate,
-  .playstoreProject,
-  .Playstore-Tile {
+  .playstoreProject{
     width: 90%;
     height: auto;
     flex-direction: column;
@@ -2000,26 +2103,151 @@ visibility: visible;
     padding: 2rem;
   }
 
-  .chat-container {
-    width: 100%;
-    height: 70vh;
-    margin-right: 0;
-    border-radius: 0.5rem;
-  }
-
   .chat-form input {
     font-size: 0.9rem;
     padding: 0.8rem;
   }
 
-  .AIStartDiv {
+  /* ------------------About Mobile ---------------------------- */
+  .AboutSection {
+    margin-top: 4rem;
     width: 90%;
-    height: auto;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    padding: 1rem;
+    /* border: 1px solid red; */
+    padding: 2rem;
+    font-size: 0.7rem;
+    text-align: justify;
   }
-}
 
-*/
+  .aboutDiscriptionDiv h2 {
+    text-align: center;
+  }
+
+  .aboutTable {
+    font-size: 0.6rem;
+    margin-right: 1rem;
+  }
+
+  .Label-Info {
+    width: 90%;
+  }
+  .Label-Info h2{
+    font-size: 1rem;
+  }
+
+
+  .Label-Info h3 {
+    /* width: 100%; */
+    font-size: small;
+  }
+
+  .globalColor {
+    font-size: 1.2rem;
+  }
+
+  /* --------------------------Skill Mobile-------------- */
+  .skillmaindiv {
+    position: relative;
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .sdetDiv {
+    padding: 30px;
+    width: 85%;
+  }
+
+  .sdeDiv {
+    padding: 30px;
+    width: 85%;
+  }
+
+  .companylabeldiv h1 {
+    width: 6rem;
+    font-size: 1rem;
+    padding-left: 1rem;
+    text-align: center;
+  }
+
+  .companylabeldiv h1 a {
+    font-size: 1rem;
+  }
+
+  .WorkDetails h2{
+    font-size: .8rem;
+  }
+
+  .Company2-role{
+    font-size: .5rem;
+  }
+
+  .worklist li h3{
+    font-size: 1rem;
+  }
+
+  .companylabeldiv .Company2{
+    font-size: 1rem;
+    width: 7rem;
+    text-align: left;
+  }
+
+  .companylabeldiv .Company2 a{
+  font-size: 1rem;
+  }  
+
+
+  .Company2-role{
+    font-size: .8rem !important;
+  }
+
+  .workMaindiv::before {
+    top: .5rem;
+    left: -1rem;
+  }
+
+  .workMaindiv::after {
+    bottom: 22rem;
+    left: -1rem;
+    }
+
+    .ProjectsSectionDiv{
+      padding: 3.5rem;
+      /* margin-right: 2.5rem; */
+      margin-left: -4rem;
+    }
+
+    .Project-Tile {
+      margin-right:-2rem !important;
+      /* padding: 1rem; */
+    }
+
+    .playstoreProject 
+    {
+    height: 350px;
+    }
+
+    .Playstore-Tile {
+      height: fit-content;
+      transform: scale(.5);
+      margin-left: -11rem;
+    }
+
+    .Certificate-design{
+      transform: scale(.6);
+      margin-bottom:-5rem;
+    }
+
+    .Certificate
+    {
+      padding: 0rem;
+    }
+
+    .CertificateTitle{
+      width: 25rem;
+      transform: scale(.7);
+    }
+
+
+}
